--- a/Ansible_CPE/site.yml
+++ b/Ansible_CPE/site.yml
@@ -5,12 +5,14 @@
   pre_tasks:
   
   - name: install updates (CentOS)
+    tags: always
     dnf: 
       update_only: yes
       update_cache: yes
     when: ansible_distribution == "CentOS"
 
   - name: install updates (Ubuntu)
+    tags: always
     apt:
       upgrade: dist
       update_cache: yes
@@ -22,6 +24,7 @@
   tasks: 
 
   - name: install apache and php for Ubuntu servers
+    tags: apache, apache2, ubuntu
     apt:
       name:
         - apache2
@@ -31,6 +34,7 @@
     when: ansible_distribution == "Ubuntu"
 
   - name: install apache and php for CentOS servers
+    tags: apache, centos, httpd
     dnf:
       name:
         - httpd
@@ -38,16 +42,33 @@
       state: latest
     when: ansible_distribution == "CentOS"
 
+  - name: copy default html file for site
+    tags: apache, apache2, httpd
+    copy:
+      src: default_site.html
+      dest: /var/www/html/index.html
+      owner: root
+      group: root
+      mode: 0644
+
 
 - hosts: db_servers
   become: true
   tasks:
 
   - name: install mariadb package (CentOS)
+    tags: centos, db, mariadb
     yum:
       name: mariadb-server
       state: latest
     when: ansible_distribution == "CentOS"
+
+  - name: install mariadb package (Ubuntu)
+    tags: ubuntu, db, mariadb
+    apt:
+      name: mariadb-server
+      state: latest
+    when: ansible_distribution == "Ubuntu"
 
   - name: "Mariadb- Restarting/Enabling"
     service:
@@ -55,18 +76,13 @@
       state: restarted
       enabled: true
 
-  - name: install mariadb package (Ubuntu)
-    apt:
-      name: mariadb-server
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
 
 - hosts: file_servers
   become: true
   tasks:
   
   - name: install samba package
+    tags: samba
     package:
       name: samba
       state: latest
